--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
   "devDependencies": {
     "@types/jsdom": "^20.0.0",
     "@types/node": "^16.11.56",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
+    "@vue/compiler-sfc": "^3.4.37",
     "@vue/test-utils": "^2.0.2",
     "@vue/tsconfig": "^0.1.3",
     "cypress": "^13.13.2",
+    "eslint": "^9.9.0",
+    "eslint-plugin-vue": "^9.27.0",
     "jsdom": "^20.0.0",
     "npm-run-all": "^4.1.5",
     "start-server-and-test": "^2.0.2",
